--- a/tex/bokGalil.tex
+++ b/tex/bokGalil.tex
@@ -102,6 +102,7 @@ actions are global with no application to specific tasks. If a single task crash
 
 \emteal{./bok\_read\_filters -f\$BOK\_GALIL\_DOCS/bok\_sfilters.txt} \\
 
+\noindent If these files are changed whilst the system is running, the system must be re-started for them to take effect.
 
 \subsection{Day Crew Action(s)}
 \label{daycrewactions}
