Updated handover document from feedback

--- a/tex/bokGalil.tex
+++ b/tex/bokGalil.tex
@@ -36,10 +36,10 @@ the Bok 90-inch telescope. \\
 \section{Quick Start}
 \label{quickstart}
 
-\noindent To start the system, execute the following if operating on \sfmagenta{bonsai (10.30.1.7)}\footnote{The commands are 
-exactly the same from \sfmagenta{banzai (10.30.1.8)} but with the different IP address!}: \\
+\noindent To start the system, execute the following if operating on \sfmagenta{bonsai (10.30.1.7)}\footnote{If running from
+\sfmagenta{banzai} (10.30.1.8), the command is: \emteal{ssh -XY primefocus@banzai}}: \\
 
-\emteal{ssh -XY primefocus@10.30.1.7}
+\emteal{ssh -XY primefocus@bonsai}
 
 \emteal{cd /home/primefocus/bokGalil}
 
@@ -224,7 +224,7 @@ Other repositories required to support operations are:
 \begin{description}
 \item[dataserver] \ttblue{https://github.com/so-mops/dataserver.git} \\
 \item[bok-90prime-gui] \ttblue{https://github.com/so-90prime/bok-90prime-gui.git} \\
-\item[pyINDI] \ttblue{git+https://github.com/MMTObservatory/pyINDI.git} \\
+\item[pyINDI] \ttblue{https://github.com/MMTObservatory/pyINDI.git} \\
 \end{description}
 
 \subsection{Required Components}
