Added Azcam instructions

--- a/tex/bokGalil.tex
+++ b/tex/bokGalil.tex
@@ -153,6 +153,13 @@ accessed via the engineering interface (\ttblue{http://10.30.1.7:5905/indi}) as 
  \label{engineer}
 \end{figure}
 
+\subsection{Day Crew: Starting AzCam}
+
+The day crew should also start AzCam by double clicking on the 90Prime 'star' icon on the Azcam computer.  Sometimes AzCam take a while to get started, but once loaded there are six observing modes.  The day crew should select \underline{option 6: New 90Prime (archon)}.  So that the camera is ready for the observers, please also 1) hit the \underline{Reset button} so that the temperature properly displays; 2) make sure that the Filename is changed so data goes to `/nfs/data/primefocus/20250918' where the last directory corresponds to the current date, {\it yyyymmdd}; 3) please set the Sequence number to 1.
+
+\noindent The observer will have to update the Filename on subsequent nights, but this will get them started on the right foot.
+
+
 \subsection{Running IRAF}
 \label{Running IRAF}
 Once the instrument is fully connected, day crew usually take an image to visually check the output array and check counts. This can be done
